[package]
name = "grass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
egui_extras = { version = "0.26.2", features = ["all_loaders"] }
env_logger = "0.11.2"
opml = "1.1.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
rss = "2.0.7"
